--- a/module-admin/src/main/resources/templates/templateManage/templateManageForm.html
+++ b/module-admin/src/main/resources/templates/templateManage/templateManageForm.html
@@ -1,88 +1,89 @@
-<form id ="templateManageForm" th:object="${template}" method="post">
-    <div class="card-header p-b-0">
-        <h3 class="sub-title"><strong>기본정보</strong></h3>
-    </div>
+<div class="card">
+    <form id ="templateManageForm" th:object="${template}" method="post">
+        <input type="hidden" th:field="*{id}">
+        <div class="card-header p-b-0">
+            <h3 class="sub-title"><strong>기본정보</strong></h3>
+        </div>
 
-    <!-- Tab Container Start -->
-    <div class="card-block-small p-t-0">
-        <div class="row mb-3">
-            <div class="col-lg-6 col-md-6 mb-3">
-                <div class="mb-0 form-group row">
-                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>발송수단</strong>
+        <!-- Tab Container Start -->
+        <div class="card-block-small p-t-0">
+            <div class="row">
+                <div class="col-lg-6 mb-3">
+                    <div class="mb-0 form-group">
+                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="method"><strong>발송수단</strong></label>
+                        <div class="col-12">
+                            <select class="form-select form-select-sm form-control-sm form-control-round custom-select" th:field="*{method}">
+                                <option value="">- 선택 -</option>
+                                <option th:each="item2 : ${searchSendMethod}" th:value="${item2.key}" th:text="${item2.value}"></option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="col-12">
-                        <select class="form-select form-control form-control-round custom-select" th:field="*{method}">
-                            <option value="">- 선택 -</option>
-                            <option th:each="item : ${searchSendMethod}" th:value="${item.key}" th:text="${item.value}">value</option>
-                        </select>
+                </div>
+                <div class="col-lg-6 mb-3">
+                    <div class="mb-0 form-group">
+                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="category"><strong>발송유형</strong></label>
+                        <div class="col-12">
+                            <select class="form-select form-select-sm form-control-sm form-control-round custom-select" th:field="*{category}">
+                                <option value="">- 선택 -</option>
+                                <option th:each="item2 : ${searchSendCategory}" th:value="${item2.key}" th:text="${item2.value}"></option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 mb-3">
-                <div class="mb-0 form-group row">
-                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>발송유형</strong>
-                    </div>
+            <div class="row mb-3">
+                <div class="col-12 col-lg-6 mb-2 mb-lg-0">
+                    <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>사용여부</strong></div>
                     <div class="col-12">
-                        <select class="form-select form-control form-control-round custom-select" th:field="*{category}">
-                            <option value="">- 선택 -</option>
-                            <option th:each="item : ${searchSendCategory}" th:value="${item.key}" th:text="${item.value}">value</option>
-                        </select>
+                        <div class="form-radio">
+                            <div class="radio radio-inline">
+                                <label class="mb-0 form-label">
+                                    <input type="radio" name="isEnabled" value="Y" th:field="*{isEnabled}" checked="checked"/>
+                                    <i class="helper"></i>사용
+                                </label>
+                            </div>
+                            <div class="radio radio-inline">
+                                <label class="mb-0 form-label">
+                                    <input type="radio" name="isEnabled" value="N" th:field="*{isEnabled}"/>
+                                    <i class="helper"></i>사용안함
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-12 col-lg-6 mb-2 mb-lg-0">
-                <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>사용여부</strong></div>
+            <div class="row form-group required mb-3">
+                <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="title"><strong>제목</strong></label>
+                <div class="col-sm-12">
+                    <input type="text" th:field="*{title}" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요.">
+                </div>
+            </div>
+            <div class="row mb-3">
                 <div class="col-12">
-                    <div class="form-radio">
-                        <div class="radio radio-inline">
-                            <label class="mb-0 form-label">
-                                <input type="radio" name="isEnabled" value="Y" th:field="*{isEnabled}" checked="checked"/>
-                                <i class="helper"></i>사용
-                            </label>
-                        </div>
-                        <div class="radio radio-inline">
-                            <label class="mb-0 form-label">
-                                <input type="radio" name="isEnabled" value="N" th:field="*{isEnabled}"/>
-                                <i class="helper"></i>사용안함
-                            </label>
+                    <div class="mb-0 form-group row ">
+                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="content"><strong>내용</strong></label>
+                        <div class="col-12">
+                            <textarea class="form-control" id="content" th:field="*{content}"></textarea>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row mb-3">
-            <div class="col-12">
-                <div class="mb-0 form-group required">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="title"><strong>제목</strong></label>
-                    <div class="col-12">
-                        <input type="text" class="form-control form-control-round" id="title" placeholder="제목" th:field="*{title}">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-12">
-                <div class="mb-0 form-group row ">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="content"><strong>내용</strong></label>
-                    <div class="col-12">
-                        <textarea class="form-control" id="content" th:field="*{content}"></textarea>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </form>
+
     <div class="card-block-small">
         <button type="button" class="btn btn-disabled m-r-5" id="cancelInsertMmnws" onclick="fn_cancel()">취소</button>
         <th:block sec:authorize-url="/mng/mmnws/insertMmnws.do">
             <button type="button" class="btn btn-primary" id="insertMmnws" onclick="fn_save()">저장</button>
         </th:block>
     </div>
-    <!-- Tab Container End -->
-</form>
+</div>
+<!-- Tab Container End -->
 
+<!--<script type="text/javascript" th:src="@{/js/custom-design.js}"></script>-->
 <script type="text/javascript">
+    var formId = $("#id").val();
+
     var validator = $(document).ready(function(){
         $("#templateManageForm").validate({
             rules: {
@@ -95,33 +96,36 @@
     });
 
     function fn_cancel() {
-        $("#contentPanel").hide();
+        listController.init();
+        $("#contentPanel").children().remove();
     }
 
     function fn_save(){
         if(!($("#templateManageForm").valid())) return;
-        //
-        // if(!confirm("저장하시겠습니까?")) return;
-        //
-        // var data =  $("#templateManageForm").serialize();
-        //
-        // if(displayWorkProgress()){
-        //     $.ajax({
-        //         url : "/mng/mmnws/insertMmnws.do",
-        //         type: 'POST',
-        //         cache : false,
-        //         dataType: 'json',
-        //         data : data,
-        //         success : function (data){
-        //             if(data.result=="success"){
-        //                 alert(data.msg);
-        //                 $("#contentPanel").hide();
-        //             }else{
-        //                 alert(data.msg);
-        //             }
-        //             closeWorkProgress();
-        //         }
-        //     });
-        // }
+
+        if(formId === '') {
+            if(!confirm("저장하시겠습니까?")) return;
+        }else {
+            if(!confirm("수정하시겠습니까?")) return;
+        }
+
+        const data = $("#templateManageForm").serialize();
+
+        $.ajax({
+            url : formId === '' ? "/templateManage/insertForm.do" : "/templateManage/updateForm.do",
+            type: 'POST',
+            cache : false,
+            dataType: 'json',
+            data : data,
+            success : function (data){
+                if(data.result === "success"){
+                    alert(data.msg);
+                    listController.init();
+                    $("#contentPanel").children().remove();
+                }else{
+                    alert(data.msg);
+                }
+            }
+        });
     }
 </script>
