--- a/module-admin/src/main/resources/templates/templateManage/templateManageList.html
+++ b/module-admin/src/main/resources/templates/templateManage/templateManageList.html
@@ -24,7 +24,7 @@
                                     <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>발송수단</strong>
                                     </div>
                                     <div class="col-sm-12">
-                                        <select name="filterStatusSelect" class="form-select form-control form-control-round">
+                                        <select name="filterStatusSelect" class="form-select form-select-sm form-control-sm form-control-round custom-select">
                                             <option value="">- 전체 -</option>
                                             <option th:each="item : ${searchSendMethod}" th:value="${item.key}" th:text="${item.value}">value</option>
                                         </select>
@@ -84,8 +84,8 @@
                             <h5><strong>템플릿 검색결과</strong></h5>
                         </div>
                         <div class="col-12 col-md-6 text-right">
-                            <button type="button" class="btn btn btn-primary m-r-5" onclick="fn_deleteItem();">삭제</button>
-                            <button type="button" class="btn btn-primary" id="insertBtn">등록</button>
+                            <button type="button" class="btn btn-transparent m-r-5" id="deleteBtn">삭제</button>
+                            <button type="button" class="btn btn-transparent" id="insertBtn">등록</button>
                         </div>
                     </div>
                     <div class="card-block-small">
@@ -122,6 +122,8 @@
         </div>
     </div>
 
+    <script type="text/javascript" th:src="@{/js/ckeditor/build/ckeditor.js}"></script>
+    <script type="text/javascript" th:src="@{/js/ckeditor/build/UploadAdapter.js}"></script>
     <script th:inline="javascript">
         const listController = {
 
@@ -191,10 +193,23 @@
                     language: {
                         search: '검색',
                         emptyTable: '데이터가 없습니다.',
-                        info: '보기 _START_ - _END_ / _TOTAL_',
-                        infoEmpty: '보기 0 - 0 / 0',
-                        lengthMenu: '보기',
+                        info: 'No. _START_ - _END_ / Total : _TOTAL_',
+                        infoEmpty: 'No. 0 - 0 / Total : 0',
+                        lengthMenu: 'No.',
                         loadingRecords: '로딩중..',
+                        paginate: {
+                            first:      "처음",
+                            last:       "마지막",
+                            next:       "다음",
+                            previous:   "이전"
+                        },
+                        select: {
+                            rows: {
+                                _: '',
+                                0: '',
+                                1: ''
+                            }
+                        },
                     }
                 })
 
@@ -208,6 +223,8 @@
                         dataType: 'html'
                     }).done(function (response) {
                         $('#contentPanel').html(response);
+                        const offset = $("#contentPanel").offset();
+                        $('html, body').animate({scrollTop: offset.top}, 0);
                     }).fail(function (error) {
                     });
                 }).on('deselect', function (e, dt, type, indexes) {
@@ -222,8 +239,8 @@
                     if (confirm('삭제하시겠습니까?')) {
                         $.ajax({
                             type: 'delete',
-                            data: {deleteIds: listController.selectedRow.join(",")},
-                            url: '/admin/faqs'
+                            data: {ids: listController.selectedRow.join(",")},
+                            url: `/templateManage/deleteItems.do`,
                         }).done(function () {
                             alert('삭제 되었습니다.');
                             listController.init();
@@ -246,6 +263,8 @@
                     dataType: 'html'
                 }).done(function (response) {
                     $('#contentPanel').html(response);
+                    const offset = $("#contentPanel").offset();
+                    $('html, body').animate({scrollTop: offset.top}, 0);
                 }).fail(function (error) {
                 });
             }).on('click', '#deleteBtn', function () {
